--- a/AI for Medical Prognosis/C2W1_L1_Create a linear model.Rmd
+++ b/AI for Medical Prognosis/C2W1_L1_Create a linear model.Rmd
@@ -2,7 +2,7 @@
 title: "Week 1 Labs 1: Create a Linear Model - using R"
 author: "Juan Li (based on python code on Github)"
 date: "04/26/2022"
-output: rmarkdown::html_vignette
+output: github_document
 vignette: >
 ---
 
